<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:background="#91C7B1"
            android:scaleType="fitStart"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/guideline13"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#91C7B1"
            android:padding="7dp"
            android:text="@string/items_title"
            android:textAlignment="center"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="24sp"
            android:text="@string/name_title"
            android:layout_weight="40"
            />

        <TextView
            android:id="@+id/winsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="24sp"
            android:layout_weight="20"
            android:text="@string/wins_title"/>
        <TextView
            android:id="@+id/lossesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="24sp"
            android:layout_weight="20"

            android:text="@string/losses_title"/>
        <TextView
            android:id="@+id/tiesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="24sp"
            android:layout_weight="20"

            android:text="@string/ties_title"/>
    </LinearLayout>
    <ListView
        android:id="@+id/usersListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>